# shclient-mqtt-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile_base  Dockerfile_builder  README.md  build_and_run.sh
include/: Shclient.hpp  devicefactory.hpp  devices.hpp  logger.h
include/rapidxml/: rapidxml.hpp
src/: main.cpp
src/config/: shc-mqtt.conf  shc-mqtt.conf_example
